# taskdep-suit

./: .gitignore  README.md  conf  notas
00/: stat-omp-dbg
benchmarks/: TODO  actions.lua  bench  config.lua
benchmarks/BOTS/fft/src/: fft.c
benchmarks/BOTS/fib/src/: Makefile
benchmarks/BOTS/floorplan/src/: floorplan.c
benchmarks/BOTS/nqueens/src/: nqueens.c
benchmarks/BOTS/strassen/src/: Makefile
benchmarks/Games/ParallelBewoulf/src/: Makefile
benchmarks/Games/tictactoe/src/: Makefile
benchmarks/OMPSpec/target-3c/src/: a.out
benchmarks/Parboil/mri-q/log/: mri-q.compile
benchmarks/Parboil/spmv/log/: spmv.compile
benchmarks/Parboil/stencil/log/: stencil.compile
benchmarks/Parboil/stencil/src/: stencil
benchmarks/Polybench/2MM/log/: .compile  2MM.compile
benchmarks/Polybench/2MM/src/: 2mm.c
benchmarks/Polybench/3DCONV/src/: 3DConvolution.c
benchmarks/Polybench/3MM/log/: 3MM.compile
benchmarks/Polybench/3MM/src/: 3mm.c
benchmarks/Polybench/ATAX/log/: ATAX.compile
benchmarks/Polybench/CORR/log/: CORR.compile
benchmarks/Polybench/COVAR/log/: COVAR.compile
benchmarks/Polybench/FDTD-2D/log/: FDTD-2D.compile
benchmarks/Polybench/GEMM/log/: GEMM.compile
benchmarks/Polybench/GEMM/src/: a.out  gemm.c
benchmarks/Polybench/GRAMSCHM/src/: gramschmidt.c
benchmarks/Polybench/MVT/log/: MVT.compile
benchmarks/Polybench/MVT/src/: mvt.c
benchmarks/Polybench/SYR2K/log/: SYR2K.compile
benchmarks/Polybench/SYRK/src/: syrk.c
benchmarks/Polybench/SYRK_M/src/: syrk_m.c
benchmarks/Rodinia/bfs/log/: bfs.compile
benchmarks/Rodinia/hotspot/log/: hotspot.compile
benchmarks/Rodinia/srad/log/: srad.compile
benchmarks/Toys/: README.md
benchmarks/Toys/pi-calc/output/: omp  seq
benchmarks/Toys/pi-calc/src/: test.c
benchmarks/Toys/toy1/: build.lua
benchmarks/Toys/toy1/log/: toy1.execute
benchmarks/Toys/toy10/: .toy7.cpp.swp
benchmarks/Toys/toy13/: .toy12.cpp.swp
benchmarks/Toys/toy2/: build.lua
benchmarks/Toys/toy4/: build.lua
benchmarks/Toys/toy5/: build.lua
benchmarks/Toys/toy7/: build.lua
benchmarks/Toys/toy8/: build.lua
benchmarks/Toys/toy9/: .Makefile.swp
benchmarks/kastors-1.1/: measures_g++
benchmarks/kastors-1.1/jacobi/: Makefile  jacobi_seq  jacobi_task  jacobi_taskdep
benchmarks/kastors-1.1/plasma/: Makefile
benchmarks/kastors-1.1/sparselu/: sparselu_seq  sparselu_task  sparselu_taskdep
benchmarks/kastors-1.1/strassen/: strassen_seq
benchmarks/starbench/: README.md
bots/alignment/: Makefile
bots/alignment/log/: out.json
bots/fft/: Makefile
bots/fft/log/: out.json
bots/fft/src/omp/: fft.c  (+1 more)
bots/fib/: Makefile  bench.json
bots/floorplan/: Makefile
bots/floorplan/log/: out.json
bots/health/: Makefile
bots/health/log/: out.json
bots/nqueens/: Makefile
bots/nqueens/log/: out.json
bots/sort/: Makefile
bots/sparselu/: Makefile
bots/sparselu/log/: out.json
bots/strassen/: Makefile
bots/strassen/log/: out.json
bots/stuff/config/: make.config
c/: bench.c  bench.h  sha.h  sha256.c  sha256.h  sha256_test.c  test.c
ee/01-Examples/cholesky/: Makefile  Source  cholesky.c  cholesky.h
ee/01-Examples/stream-barr/: stream  stream-barr.c
ee/01-Examples/stream-deps/: Makefile  stream  stream-deps.c
kastors/jacobi/: Makefile
kastors/jacobi/log/: out.json
kastors/jacobi/src/: bench.c  define.h  jacobi-main.c  jacobi-ompss.c  jacobi-ompss2.c  jacobi-phentos-fast.cpp  jacobi-phentos-ord.cpp  jacobi-seq.c  jacobi-task-dep.c  jacobi-task.c  main.c  poisson.c  poisson.h
kastors/sparselu/: Makefile
kastors/sparselu/src/: define.h  main.c  sparselu-ompss.c  sparselu-ompss2.c  sparselu-phentos-fast.cpp  sparselu-phentos-ord.cpp  sparselu-seq.c  sparselu-task-dep.c  sparselu-task.c  sparselu.c  sparselu.h
kastors/strassen/: Makefile
kastors/strassen/log/: out.json
kastors/strassen/src/: bench.c~  bench.h  define.h  main.c  main.h  strassen-ompss.c  strassen-seq.c  strassen-task-dep.c  strassen-task.c  strassen.c
old/: notas
old/00/: stat-omp  stat-omp.c  stat-seq  stat-seq.c
old/benchmarks/: actions.lua  bench
old/benchmarks/Polybench/: Makefile
old/benchmarks/kastors/: Makefile
old/benchmarks/kastors-1.1/: Makefile  config.status
old/ee/: README
old/parsec-ompss/: LICENSE  README  install_inputs.sh  test.sh
old/parsec-ompss/bench/: run.sh  run_job.sh
old/parsec-ompss/bodytrack/src/: TrackingBenchmark.sln  aclocal.m4  configure.ac
old/parsec-ompss/bodytrack/src/TrackingBenchmark/: Makefile.am  ParticleFilterOMP.h  TrackingModel.h  TrackingModelOMP.cpp  main.cpp
old/parsec-ompss/facesim/: README.txt
old/reports/: week01.txt  week02-03.txt  week08.txt
old/results/benchmarks/: strassen.json
omps-ee/stream-barr/: Makefile  stream-barr-phentos-fast.cpp  stream-barr-phentos-ord.cpp  stream-barr.c
omps-ee/stream-deps/: Makefile  stream-deps-ompss.c  stream-deps-phentos-fast.cpp  stream-deps-phentos-ord.cpp
parsec/: README
parsec/blackscholes/: Makefile
parsec/blackscholes/input/: big
parsec/blackscholes/log/: out.json
parsec/blackscholes/output/: seq-big  seq-medium
parsec/blackscholes/src/: bs-omp.c  bs-ompss.c  bs-phentos-fast.cpp  bs-phentos-ord.cpp  bs-pt.c  bs-seq.c  bs-td.c
parsec/bodytrack/: Makefile
parsec/bodytrack/src/: AUTHORS  Makefile.in
parsec/canneal/src/: Makefile  main.cpp
parsec/dedup/: bench.json
parsec/dedup/input/: 00.txt
parsec/dedup/src/: Makefile  dedup.c  encoder.c
parsec/facesim/bench/: build.sh
parsec/facesim/parsec/: gcc-serial-gprof.bldconf
parsec/fluidanimate/bench/: run.sh
parsec/fluidanimate/src/: omp2.cpp
parsec/freqmine/bench/: build.sh
parsec/freqmine/src/: Makefile  fp_tree.cpp
parsec/streamcluster/: README.txt
parsec/streamcluster/bench/: build.sh
parsec/swaptions/: Makefile
parsec/swaptions/src/: HJM_Securities.cpp  Makefile
reports/: week01.txt  week02-03.txt  week02.txt  week04.txt  week05.txt  week06.txt  week07.txt  week08.txt
results/hardware/: DLL0746.json
riscv/: set.sh
(+374 files in other folders)
